feat: homepage changes

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,7 +47,7 @@
                         </div>
                         <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
                             href="">
-                            (12 Rating &
+                            (14 Rating &
                             Reviews)</a>
                     </div>
 
@@ -88,7 +88,7 @@
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+18138093317">
                             <i class="fa-solid fa-phone-volume fs-24"></i>
-                            +1 813-809-3317
+                            +1 (813) 809-3317
                         </a>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Trimming"
-                                    href="/lawn-trimming.html">
+                                    href="/tree-trimming.html">
                                     Trimming
                                 </a>
                             </li>
@@ -193,7 +193,7 @@
                         <!-- Call Now Button -->
                         <a title="Call Now to Learn More"
                             class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 mb-sm-0 mb-4"
-                            href="tel:+18138093317">+1 813-809-3317</a>
+                            href="tel:+18138093317">+1 (813) 809-3317</a>
 
                         <!-- Secondary Button -->
 
@@ -233,7 +233,7 @@
                         <!-- Phone Number -->
                         <a title="Phone Number" class="unit" href="tel:+18138093317"> <i
                                 class="fa-solid fa-phone me-3 fs-28 text-white"></i>
-                            +1 813-809-3317
+                            +1 (813) 809-3317
                         </a>
 
                         <!-- Facebook -->
@@ -331,7 +331,7 @@
                         <!-- Phone Number -->
                         <p>
                             Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number" href="tel:+18138093317">
-                                +1 813-809-3317</a>
+                                +1 (813) 809-3317</a>
                         </p>
 
                     </div>
