--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
                         <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
                             href="https://www.facebook.com/landscapingfromthegroundupLLC/reviews">
-                            (12 Rating &
+                            (14 Rating &
                             Reviews)</a>
                     </div>
 
@@ -88,7 +88,7 @@
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+18138093317">
                             <i class="fa-solid fa-phone-volume fs-24"></i>
-                            +1 813-809-3317
+                            +1 (813) 809-3317
                         </a>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Trimming" href="/lawn-trimming.html">
+                                <a class="nav-link" title="Trimming" href="/tree-trimming.html">
                                     Trimming
                                 </a>
                             </li>
@@ -194,9 +194,10 @@
 
                 <!-- Hero Information -->
                 <p class="hero-info">
-                    We offer a wide range of services like lawn mowing, mulching, small tree trimming, <br> prep bed
-                    areas,
-                    sidewalks, edge & blow hard surface, Trimming and shaping.
+                    Get the best lawn care services in Lakeland, FL with LFTGU Lawn care.
+                    <br>
+                    From lawn mowing to tree
+                    trimming, we offer a range of services to keep your yard looking its best.
                 </p>
 
                 <!-- Call to Action Buttons -->
@@ -205,7 +206,7 @@
                         <!-- Call Now Button -->
                         <a title="Call Now to Learn More"
                             class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 mb-sm-0 mb-4"
-                            href="tel:+18138093317">+1 813-809-3317</a>
+                            href="tel:+18138093317">+1 (813) 809-3317</a>
 
                         <!-- Secondary Button -->
 
@@ -274,18 +275,17 @@
                     </h2>
                     <p class="mb-4">
 
-                        In Lakeland, FL, homeowners count on Lakeland, FL for reliable and professional lawn
-                        care
-                        services. We're known for our commitment to quality and love for creating beautiful lawns that
-                        make homeowners proud.
+                        In Lakeland, FL, homeowners count on us for reliable and professional lawn
+                        care services. We're known for our commitment to quality and love for creating
+                        beautiful lawns that make homeowners proud.
                         <br><br>
                         At Lakeland, FL, we know that a great lawn is essential for a happy home. That's why
                         we offer a range of services, like lawn mowing, tree trimming, mulching, edge & blow hard
                         surface, sidewalks, prep bed areas , trimming & shaping . Our team works hard to keep your lawn
                         healthy and looking its
                         best, so you can relax and enjoy your outdoor space. Trust us for great service and results
-                        you'll love. Give us a call at <br> <br><a href="tel:+18138093317"
-                            class="text-decoration-underline" title="LFTGU Lawn care Contact Info">+1 813-809-3317</a>
+                        you'll love. Give us a call at <a href="tel:+18138093317" class="text-decoration-underline"
+                            title="LFTGU Lawn care Contact Info">+1 (813) 809-3317</a>
                         to see how we can help your lawn
                         thrive!
                     </p>
@@ -338,8 +338,8 @@
                             <img src="/img/service-2-icon.png" alt="Tree Trimming">
                         </div>
                         <img class="bg-icon" src="/img/service-2-icon.png" alt="Tree Trimming">
-                        <a href="/lawn-trimming.html" title="Tree Trimming" class="service-name">
-                            Bushes & Tree Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                        <a href="/tree-trimming.html" title="Tree Trimming" class="service-name">
+                            Tree Trimming <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -358,7 +358,7 @@
                         </div>
                         <img class="bg-icon" src="/img/mulching-icon.webp" alt="Mulching">
                         <a href="/lawn-mulching.html" title="Mulching Services" class="service-name">
-                           Lawn Mulching <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Lawn Mulching <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -397,7 +397,7 @@
                         </div>
                         <img class="bg-icon" src="/img/service-5-icon.png" alt="Side walks">
                         <a href="/sidewalks.html" title="Side walks" class="service-name">
-                            Sidewalk installation  <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
+                            Sidewalk installation <i class="fa-solid fa-chevron-right ms-1 fs-18"></i>
                         </a>
                     </div>
                     <div class="img-div">
@@ -452,10 +452,13 @@
                         <span class="text-secondary">Expert </span> Lawn Mowing and Maintenance
                     </h3>
                     <p class="mb-3">
-                        Discover professional care for your lawn with our expert services. We ensure your grass is
-                        perfectly trimmed and healthy year-round. From precise mowing to thorough maintenance, we take
-                        pride in delivering exceptional results. Trust us to keep your lawn looking its best with our
-                        reliable and affordable solutions.
+                        Discover the difference professional lawn care services can make for your home. At LFTGU Lawn
+                        Care, we offer expert lawn mowing and maintenance services to keep your yard looking its best.
+                        Our team is dedicated to providing top-quality service and exceptional results, so you can enjoy
+                        a beautiful, healthy lawn all year long. Whether you need regular mowing, seasonal maintenance,
+                        or expert advice, we have you covered. Trust LFTGU Lawn Care to take care of all your lawn care
+                        needs and help you create the perfect outdoor space for your home.
+
                     </p>
                     <hr>
                     <ul class="mb-4">
@@ -494,129 +497,12 @@
         <div class="container" data-aos="fade-up">
             <!-- CTA Text -->
             <h4 class="text-center lh-100 text-capitalize">Your Perfect Lawn Is A Call Away. <br>
-                Call us at +1 813-809-3317
+                Call us at +1 (813) 809-3317
             </h4>
             <!-- CTA Button -->
             <div class="d-flex justify-content-center">
                 <a title="Call LFTGU Lawn care for free estimate" class="btn btn-primary rounded-1 px-5 fs-18 mt-5"
                     href="tel:+18138093317">Call Now</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="about-us about-us-main light-section mt-5 pt-4" data-aos="fade-up">
-        <div class="container">
-            <div class="about-us-flex align-items-center">
-                <!-- Information Side -->
-                <div class="info-div">
-                    <p class="sub-header">Residential Services</p>
-                    <h2 class="header">
-                        Trimming and shaping existing shrubs that are overgrown and out of shape
-                    </h2>
-                    <p class="mb-4">
-
-                        Welcome to LFTGU Lawn Care, where we specialize in transforming overgrown and messy shrubs into
-                        beautiful features for your yard. When shrubs grow too big or lose their shape, they can make
-                        your outdoor space look untidy.
-                        <br><br>
-                        Our team is here to help. We carefully trim and shape each shrub to bring out its natural beauty
-                        and improve the overall appearance of your property. With attention to detail and a commitment
-                        to quality, we ensure your yard looks neat and well-maintained. Trust LFTGU Lawn Care to enhance
-                        your outdoor space with our professional shrub trimming services.
-
-                        ss
-                    </p>
-                    <div class="d-flex gap-2 flex-wrap">
-                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600" href="tel:+18138093317">
-                            Call Now
-                        </a>
-
-                        <a title="Residential Services" class="btn btn-secondary rounded-1 px-5 fs-20 fw-600"
-                            href="/lawn-trimming.html">
-                            Learn More
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Img Side -->
-                <div class="img-div bottom-right">
-                    <img style="object-position: center;" src="/img/about-us-2-inside.jpg"
-                        alt="LFTGU Lawn care Residential Lawn Service">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Service Areas -->
-    <section class="service-areas position-relative py-5 primary-overlay" id="service-areas">
-        <img style="object-position: bottom;" class="bg-img" src="/img/checking-garden.png"
-            alt="LFTGU Lawn care Service Areas">
-        <div class="container" data-aos="fade-up">
-            <div class="">
-                <h3 class="header text-center text-white">
-                    Our Service Areas
-                </h3>
-
-                <p class="text-center text-white">
-                    We proudly serve the following areas in Georgia:
-                </p>
-
-                <!-- Cities List -->
-                <ul class="cities pb-4">
-                    <li>
-                        <a title=" Lakeland, FL Lawn Services" href="/">
-                            Lakeland, FL
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title=" Douglassville, GA Lawn Services" href="/">
-                            Douglassville, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title=" Hiram, GA Lawn Services" href="/">
-                            Hiram, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Lithia Springs, GA Lawn Services" href="/">
-                            Lithia Springs, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title=" Mableton, GA Lawn Services" href="/">
-                            Mableton, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Marietta, GA Lawn Services" href="/">
-                            Marietta, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Powder Springs, GA Lawn Services" href="/">
-                            Powder Springs, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Smyrna, GA Lawn Services" href="/">
-                            Smyrna, GA
-                        </a>
-                    </li>
-
-                </ul>
-                <!-- CTA -->
-                <div class="d-flex justify-content-center mt-4">
-                    <a title="Call Now" class="btn btn-primary px-5 fs-19" href="tel:+18138093317">Call Now</a>
-                </div>
             </div>
         </div>
     </section>
@@ -777,24 +663,12 @@
                         6 Key Benefits of Our lawn care services
                     </h3>
                     <ul style="grid-template-columns: repeat(1, 1fr);">
-                        <li>
-                            Enhanced Appearance: Keeps your yard looking neat.
-                        </li>
-                        <li>
-                            Healthier Grass: Promotes lush growth and reduces weeds.
-                        </li>
-                        <li>
-                            Time Savings: Saves you from lawn maintenance chores.
-                        </li>
-                        <li>
-                            Expert Care: Handles pests and diseases effectively.
-                        </li>
-                        <li>
-                            Consistent Maintenance: Ensures regular upkeep.
-                        </li>
-                        <li>
-                            Higher Property Value: Boosts curb appeal and potential home worth.
-                        </li>
+                        <li>Makes your yard look good.</li>
+                        <li>Helps grass grow well and stops weeds.</li>
+                        <li>Saves you time on yard work.</li>
+                        <li>Deals with bugs and plant sickness well.</li>
+                        <li>Keeps your yard taken care of regularly.</li>
+                        <li>Increases your home's value by making it look better.</li>
                     </ul>
 
                     <a class="btn btn-secondary fs-19 px-4" href="/contact.html">
@@ -820,11 +694,11 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br>
-                            Lakeland, FL 30168
+                            Lakeland, FL <br> 30168
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
-                                target="_blank" href="">
+                                target="_blank"
+                                href="https://www.google.com/maps/place/Kathleen+Rd,+Lakeland,+FL+33810,+USA/@28.0993838,-82.0068839,17z/data=!3m1!4b1!4m6!3m5!1s0x88dd47013863653d:0x173c116da95c1a0!8m2!3d28.0993791!4d-82.004309!16s%2Fg%2F1tq6kwy1?entry=ttu">
                                 Get Directions
                             </a>
                         </p>
@@ -868,7 +742,7 @@
                         <p>
                             Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number"
                                 href="tel:+18138093317">
-                                +1 813-809-3317</a>
+                                +1 (813) 809-3317</a>
                         </p>
 
                     </div>
