--- a/tree-trimming.html
+++ b/tree-trimming.html
@@ -150,7 +150,7 @@
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Trimming" href="/lawn-trimming.html">
+                                <a class="nav-link" title="Trimming" href="/tree-trimming.html">
                                     Trimming
                                 </a>
                             </li>
