feat: homepage changes 2

--- a/index.html
+++ b/index.html
@@ -478,11 +478,11 @@
 
                     <div class="d-flex flex-wrap gap-2">
                         <a title="lawn mowing" class="btn btn-secondary fs-19 px-4" href="/contact.html">
-                            Schedule a Free Consultation
+                            Get a Free Estimate
                         </a>
-                        <a title="lawn Service" class="btn btn-outline-secondary border-2 fs-19 px-5"
-                            href="/contact.html">
-                            Contact Us
+                        <a title="lawn Service contact" class="btn btn-outline-secondary border-2 fs-19 px-5"
+                            href="tel:+18138093317">
+                            Call Now
                         </a>
                     </div>
                 </div>
